fix dependant facet flicker on no results (#1771)
https://coveord.atlassian.net/browse/JSUI-3272

--- a/sass/_CategoryFacet.scss
+++ b/sass/_CategoryFacet.scss
@@ -19,7 +19,8 @@
 }
 
 .CoveoCategoryFacet {
-  &.coveo-hidden {
+  &.coveo-hidden,
+  &.coveo-hidden-dependant-facet {
     display: none;
     &.coveo-with-placeholder {
       display: block;
